--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "1.2-11" %}
-
+{% set version = '1.2-11' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -8,48 +7,67 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: tcltk2_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/tcltk2_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/tcltk2/tcltk2_{{ version }}.tar.gz
-
+    - {{ cran_mirror }}/src/contrib/tcltk2_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/tcltk2/tcltk2_{{ version }}.tar.gz
   sha256: ad183ae3b7190501504a0589e0b3be480f04267303e3384fef00987446a37dc5
 
 build:
+  merge_build_host: True  # [win]
+  number: 1003
   noarch: generic
-  number: 1002
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{ posix }}zip               # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+  host:
     - r-base
-
   run:
     - r-base
 
 test:
   commands:
-    - $R -e "library('tcltk2')"  # [not win]
+    - $R -e "library('tcltk2')"           # [not win]
     - "\"%R%\" -e \"library('tcltk2')\""  # [win]
 
 about:
-  home: https://cran.r-project.org/web/packages/tcltk2/index.html
+  home: http://www.sciviews.org/SciViews-R
   license: LGPL-3.0-only
-  summary: A series of additional Tcl commands and Tk widgets with style and various functions (under Windows
+  summary: 'A series of additional Tcl commands and Tk widgets with style and various functions
+    (under Windows: DDE exchange, access to the registry and icon manipulation) to supplement
+    the tcltk package'
   license_family: LGPL
   license_file:
-    - {{ environ["PREFIX"] }}/lib/R/share/licenses/LGPL-3
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/LGPL-3'
     - LICENSE
+
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - MathiasHaudgaard
-    - FrodePedersen
     - ArneKr
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
+    - FrodePedersen
+    - MathiasHaudgaard
+
+# Package: tcltk2
+# Type: Package
+# Version: 1.2-11
+# Date: 2014-12-19
+# Title: Tcl/Tk Additions
+# Author: Philippe Grosjean [aut, cre]
+# Authors@R: c(person("Philippe", "Grosjean", role = c("aut", "cre"), email = "phgrosjean@sciviews.org"))
+# Maintainer: Philippe Grosjean <phgrosjean@sciviews.org>
+# Depends: R (>= 2.8.0), tcltk
+# Suggests: utils
+# SystemRequirements: Tcl/Tk (>= 8.5), Tktable (>= 2.9, optional)
+# Description: A series of additional Tcl commands and Tk widgets with style and various functions (under Windows: DDE exchange, access to the registry and icon manipulation) to supplement the tcltk package
+# License: LGPL-3 + file LICENSE
+# URL: http://www.sciviews.org/SciViews-R
+# BugReports: https://r-forge.r-project.org/tracker/?group_id=194
+# Packaged: 2014-12-19 16:32:30 UTC; phgrosjean
+# NeedsCompilation: no
+# Repository: CRAN
+# Date/Publication: 2014-12-20 10:35:06
